# skellytracker

./: .gitignore  CITATION.cff  README.md  RUN_ME.py  SINGLE_IMAGE_RUN.py  pyproject.toml
.github/workflows/: linting-ruff.yml  python-testing.yml
shared/: skellytracker-logo.ai
skelly_tracker/: __init__.py  process_folder_of_videos.py
skelly_tracker/gui/: gui.py
skelly_tracker/gui/widgets/: run_button_widget.py
skelly_tracker/system/: default_paths.py
skelly_tracker/trackers/: tracker_base.py  tracker_manager.py  video_processor.py
skelly_tracker/trackers/base_tracker/: base_recorder.py  base_tracker.py  base_tracking_params.py  tracked_object.py  tracking_data_model.py  video_handler.py
skelly_tracker/trackers/bright_point_tracker/: brightest_point_recorder.py  brightest_point_tracker.py
skelly_tracker/trackers/charuco_tracker/: charuco_board_definition.py  charuco_tracker.py
skelly_tracker/trackers/color_tracker/: brightest_point_tracker.py  color_tracker.py
skelly_tracker/trackers/image_demo_viewer/: image_demo_viewer.py
skelly_tracker/trackers/mediapipe/: mediapipe_holistic_tracker.py  mediapipe_parameters_model.py  mediapipe_skeleton_detector.py  mediapipe_skeleton_names_and_connections.py
skelly_tracker/trackers/mediapipe_tracker/: mediapipe_holistic_recorder.py  mediapipe_holistic_tracker.py  mediapipe_model_info.py
skelly_tracker/trackers/mmpose_tracker/: mmpose_tracker.py
skelly_tracker/trackers/segment_anything_tracker/: segment_anything_tracker.py
skelly_tracker/trackers/webcam_demo_viewer/: webcam_demo_viewer.py
skelly_tracker/trackers/yolo_mediapipe_combo_tracker/: yolo_mediapipe_combo_tracker.py
skelly_tracker/trackers/yolo_object_detection_tracker.py/: yolo_object_detection_tracker.py  yolo_objection_detection_model_dictionary.py
skelly_tracker/trackers/yolo_object_tracker/: yolo_object_model_dictionary.py  yolo_object_model_info.py  yolo_object_recorder.py  yolo_object_tracker.py
skelly_tracker/trackers/yolo_tracker/: yolo_model_info.py  yolo_recorder.py  yolo_tracker.py  yolo_video_test.py
skelly_tracker/utilities/quine_directory_printer/: quine.py
skellytracker/: RUN_ME.py  SINGLE_IMAGE_RUN.py  __init__.py  __main__.py  process_folder_of_videos.py  tracker_manager.py
skellytracker/experiments/: inferencer_demo.py  simple_inference.py  top_down_demo_with_mmdet.py
skellytracker/gui/: gui.py
skellytracker/io/demo_viewers/: image_demo_viewer.py  webcam_demo_viewer.py
skellytracker/io/process_videos/: process_single_video.py
skellytracker/scripts/: __init__.py  blendshapes_to_csv.py
skellytracker/system/: constants.py  default_paths.py  install_mmpose.py  logging_configuration.py
skellytracker/test/: test_brightest_point_tracker.py  test_test.py  test_yolo_pose_tracker.py
skellytracker/tests/: conftest.py  test_brightest_point_tracker.py  test_charuco_tracker.py  test_mediapipe_holistic_tracker.py  test_mediapipe_pose_tracker.py  test_yolo_mediapipe_combo_tracker.py  test_yolo_object_tracker.py  test_yolo_pose_tracker.py
skellytracker/trackers/: __init__.py  skelly_tracker_types.py  tracker_manager.py
skellytracker/trackers/base_tracker/: base_recorder.py  base_tracker.py  base_tracker_abcs.py  base_tracking_params.py  model_info.py  tracked_object.py  video_handler.py
skellytracker/trackers/bright_point_tracker/: __brightest_point_tracker.py  brightest_point_annotator.py  brightest_point_detector.py  brightest_point_model_info.py  brightest_point_observation.py  brightest_point_recorder.py  brightest_point_tracker.py
skellytracker/trackers/charuco_tracker/: __charuco_tracker.py  __init__.py  camera_calibration_estimation.py  camera_calibration_estimator.py  charuco_annotator.py  charuco_camera_calibrator.py  charuco_detector.py  charuco_model_info.py  charuco_observation.py  charuco_observations.py  charuco_recorder.py  charuco_tracker.py  charuco_tracker_main.py
skellytracker/trackers/demo_viewers/: image_demo_viewer.py  webcam_demo_viewer.py
skellytracker/trackers/image_demo_viewer/: image_demo_viewer.py
skellytracker/trackers/mediapipe_blendshape_tracker/: mediapipe_blendshape_model_info.py  mediapipe_blendshape_recorder.py  mediapipe_blendshape_tracker.py
skellytracker/trackers/mediapipe_pose_tracker/: mediapipe_pose_model_info.py  mediapipe_pose_recorder.py  mediapipe_pose_tracker.py
skellytracker/trackers/mediapipe_tracker/: __init__.py  __mediapipe_tracker.py  get_mediapipe_face_info.py  mediapipe_annotator.py  mediapipe_detector.py  mediapipe_holistic_recorder.py  mediapipe_holistic_tracker.py  mediapipe_model_info.py  mediapipe_observation.py
skellytracker/trackers/mmpose_tracker/: mmpose_tracker.py
skellytracker/trackers/openpose_tracker/: openpose_model_info.py  openpose_parser.py  openpose_recorder.py  openpose_tracker.py
skellytracker/trackers/rtmpose_tracker/: rtmpose_model_info.py  rtmpose_recorder.py  rtmpose_tracker.py
skellytracker/trackers/segment_anything_tracker/: segment_anything_tracker.py
skellytracker/trackers/webcam_demo_viewer/: webcam_demo_viewer.py
skellytracker/trackers/yolo_mediapipe_combo_tracker/: yolo_mediapipe_combo_tracker.py
skellytracker/trackers/yolo_tracker/: yolo_recorder.py  (+3 more)
skellytracker/utilities/: download_test_image.py  get_video_paths.py
(+4 files in other folders)
