[tool.poetry]
name = "skelly-tracker"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Skelly FreeMoCap"]
packages = [{include = "skelly_tracker"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
opencv-contrib-python = "4.8.*"
PySide6 = "^6.6.0"
pydantic = "^1.10.7"
mediapipe = "^0.10.0"
ultralytics = "^8.0.202"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
bumpver = "^2023.1121"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]





classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", #https://www.gnu.org/philosophy/open-source-misses-the-point.en.html
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]