# pyproject.toml
# originally based on - https://realpython.com/pypi-publish-python-package/

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skellytracker"
readme = "README.md"
authors = [
    {name = "Skelly FreeMoCap", email = "info@freemocap.org"},
    ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Video (UVC)",
    ]
keywords = [
    "camera",
    "stream",
    "video",
    "image",
    "opencv",
    "skelly",
    "freemocap",
    "motion capture",
    "synchronization",
    "computer vision"
]

#dynamic = ["dependencies"]
dependencies = [
    "opencv-contrib-python==4.8.*",
    "pydantic==2.*",
    "numpy<2",
    "tqdm==4.*",
]
requires-python = ">=3.9,<3.13"

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "ruff"]
mediapipe = ["mediapipe==0.10.14"]
yolo = ["ultralytics~=8.0.202"]
all = ["ultralytics~=8.0.202", "mediapipe==0.10.14"]

[project.urls]
Homepage = "https://github.com/freemocap/skellytracker"

[tool.bumpver]
current_version = "v2024.08.1017"

version_pattern = "vYYYY.0M.BUILD[-TAG]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"skellytracker/__init__.py" = ["{version}"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101"]

[tool.ruff.lint]
extend-select = ["B", "S", "C4", "ISC", "PERF"]

[project.scripts]
skellytracker = "skellytracker.__main__:cli_main"

[tool.setuptools]
py-modules = ["skellytracker"]